--- a/canvas2/index.html
+++ b/canvas2/index.html
@@ -7,37 +7,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" integrity="sha384-2hfp1SzUoho7/TsGGGDaFdsuuDL0LX2hnUp6VkX3CUQ2K4K+xjboZdsXyp4oUHZj" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/js/bootstrap.min.js" integrity="sha384-VjEeINv9OSwtWFLAtmc4JCtEJXXBub00gtSnszmspDLCtC0I4z4nqz7rEFbIZLLU" crossorigin="anonymous"></script>
     <!-- HackforPlayer -->
-    <script async src="./lib/hackforplayer.js" onload="h4p()"></script>
+    <script async src="../lib/hackforplayer.js" onload="h4p()"></script>
     <style media="screen">
     .wrapper {
       max-width: 680px;
       margin-left: 10px;
     }
     </style>
-<script id="script" type="hack">
-// 2. 基本のキャンバス
-var p5 = require('https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.3/p5.min.js');
-new p5();
-pixelDensity(1);
-resizeCanvas(1000, 1000);
-Hack.view = canvas;
-
-
-// ミッションがとどいたよ！
-// 「三角形を描こう」
-
-background(255);
-
-// ヒント：lineは「線」という意味
-// line(100, 200, 800, 900); という風に書けば、
-// 左から100,上から200の場所〜左から800,上から900の場所に１本線を引くよ
-// キャンバスの幅と高さは、どちらも 1000 だよ
-
-line(100, 200, 800, 900);
-
-
-// ＊書き換えたら、電源ボタンを押してコードをキャンバスに送ろう
-</script>
+    <script class="canvas" src="./main.js" alias="main" type="hack"></script>
+    <script class="canvas" src="../common/sketch.js" alias="sketch" type="hack"></script>
   </head>
   <body>
     <div class="jumbotron">
@@ -48,11 +26,11 @@ line(100, 200, 800, 900);
     </div>
     <div class="wrapper">
       <div class="alert alert-info">2. 基本のキャンバス</div>
-      <div class="h4p__container" data-target="#script" style="width: 100%; height: 50vh;"></div>
+      <div class="h4p__container" data-target=".canvas" style="width: 100%; height: 50vh;"></div>
     </div>
     <div class="m-y-2 alert alert-warning">
       <p>ぜんぶ終わったら、次に進もう</p>
-      <a href="./canvas3.html">次のキャンバスへ</a>
+      <a href="./canvas3/index.html">次のキャンバスへ</a>
     </div>
   </body>
 </html>
