--- a/canvas1/index.html
+++ b/canvas1/index.html
@@ -30,7 +30,7 @@
     </div>
     <div class="m-y-2 alert alert-warning">
       <p>ぜんぶ終わったら、次に進もう</p>
-      <a href="../canvas2/index.html">次のキャンバスへ</a>
+      <a href="../canvas2/">次のキャンバスへ</a>
     </div>
   </body>
 </html>
