--- a/canvas3/index.html
+++ b/canvas3/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="wrapper">
       <div class="alert alert-info">3. 応用のキャンバス</div>
-      <div class="h4p__container" data-target=".canvas" style="width: 100%; height: 50vh;"></div>
+      <div class="h4p__container" data-target=".canvas" data-main="main" style="width: 100%; height: 50vh;"></div>
     </div>
     <div class="m-y-2 alert alert-warning">
       <p>ぜんぶ終わったら、次に進もう</p>
