--- a/canvas4/index.html
+++ b/canvas4/index.html
@@ -27,7 +27,7 @@
     </div>
     <div class="wrapper">
       <div class="alert alert-info">4. 自由のキャンバス</div>
-      <div class="h4p__container" data-target=".canvas" style="width: 100%; height: 50vh;"></div>
+      <div class="h4p__container" data-target=".canvas" data-main="main" style="width: 100%; height: 50vh;"></div>
     </div>
   </body>
 </html>
