--- a/canvas4/index.html
+++ b/canvas4/index.html
@@ -23,11 +23,11 @@
       <p class="lead">関数が使えたら絵がカンタンにかけるって、ホントだろうか？</p>
       <hr class="m-y-2">
       <p>おめでとう！すべてのミッションをクリアした！</p>
-      <p>まだまだたくさんの関数があるよ。<a target="_blank" href="http://p5js.org/reference/">ここをクリックして他の関数をチェック！</a></p>
+      <p>まだまだたくさんの関数があるよ。色を変えたり、太さを変えたり…もっと色々。<a target="_blank" href="http://p5js.org/reference/">ここをクリックして他の関数をチェック！</a></p>
     </div>
     <div class="wrapper">
       <div class="alert alert-info">4. 自由のキャンバス</div>
-      <div class="h4p__container" data-target=".canvas" data-main="main" style="width: 100%; height: 50vh;"></div>
+      <div class="h4p__container" data-target=".canvas" data-main="main" style="width: 100%; height: 100vh;"></div>
     </div>
   </body>
 </html>
